oxiplate/tests/broken/default-escaper.stderr
error: Setting the default escaper group to `json` failed due to the inferred escaper group already being set to `html`. If this was intentional, consider using `replace_escaper_group` instead.
 --> tests/broken/default-escaper.rs:4:51
  |
4 | #[oxiplate_inline(html: "{% default_escaper_group json %}{% default_escaper_group json %}{{ title }}")]
  |                                                   ^^^^

error: Unexpected 'default_escaper_group' statement after already setting the default escaper group
 --> tests/broken/default-escaper.rs:4:83
  |
4 | #[oxiplate_inline(html: "{% default_escaper_group json %}{% default_escaper_group json %}{{ title }}")]
  |                                                                                   ^^^^

error: Unexpected 'default_escaper_group' statement after content already present in template
  --> tests/broken/default-escaper.rs:10:60
   |
10 | #[oxiplate_inline("<!DOCTYPE html>{% default_escaper_group html %}{{ title }}")]
   |                                                            ^^^^

error: Unexpected 'replace_escaper_group' statement after content already present in template
  --> tests/broken/default-escaper.rs:16:60
   |
16 | #[oxiplate_inline("<!DOCTYPE html>{% replace_escaper_group html %}{{ title }}")]
   |                                                            ^^^^

error: No escaper group named `escaper_that_does_not_exist` was found. Available: html, json, md, your_group
  --> tests/broken/default-escaper.rs:22:45
   |
22 | #[oxiplate_inline("{% default_escaper_group escaper_that_does_not_exist %}{{ title }}")]
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Some writ tokens were not generated due to an error setting the default escaper group.
  --> tests/broken/default-escaper.rs:21:10
   |
21 | #[derive(Oxiplate)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
